추상 클래스 정의에 따라 naver api client 보완
추상 클래스 정의에 따라 naver api client 보완

Changelog: changed